# python

./: README.md
bullshit/: pyproject.toml
bullshit/bullshit/: credentials.json  google_sheet.py  token.json
gastos/: gastos.py
personal-assets/: README.md  Stock.py  asset_value.py  main.py  requirements.txt  utils.py
personal-assets/tests/: main.py
personal-finance/: .coveragerc  README.md  expences.py  expenses.py  main.py  pytest.ini  requirements.txt
personal-finance/tests/: test_expenses.py  test_main.py  test_user_input.py
prova-av02/: main.ipynb
prova-sv04/: covid19.json  felipeSilvaDeBorba.ipynb
tutle-letters/: draw_word.py
